spade-tests/src/snapshots/spade_tests__ast_lowering__implicit_visibility_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    mod secret {}
}

mod b {
    use super::a::secret; // this will fail
}


error: Path cannot be traversed
  ┌─ testinput:6:9
  │
1 │ mod a {
  │     - The item is inaccessible because this module is inaccessible
2 │     mod secret {}
  │         ------ The inaccessible item is defined here
  ·
6 │     use super::a::secret; // this will fail
  │         ^^^^^^^^^^^^^^^^
  │         │         │
  │         │         this item is not inaccessible from the current namespace
  │         Path cannot be traversed
  │
  = note: consider using `pub` to alter its visibility
